--- a/ecs-publish.buildscript.gradle
+++ b/ecs-publish.buildscript.gradle
@@ -28,6 +28,6 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    classpath 'org.ajoberstar:gradle-git:1.1.0-milestone.1',
+    classpath 'org.ajoberstar:gradle-git:1.1.0',
             'net.saliman:gradle-cobertura-plugin:2.2.5'
 }
