added *.txt to distribution zip instead of individual txt files

--- a/ecs-publish.gradle
+++ b/ecs-publish.gradle
@@ -207,8 +207,9 @@ distributions {
     main {
         contents {
             from configurations.archives.allArtifacts.files
-            from 'readme.txt'
-            from 'license.txt'
+            from('.') {
+                include '*.txt'
+            }
             into('lib') {
                 from configurations.runtime
             }
