changed default task for tool sub-projects to shadowJar

--- a/ecs-tool.subproject.gradle
+++ b/ecs-tool.subproject.gradle
@@ -49,6 +49,8 @@ buildscript {
 
 apply plugin: 'com.github.johnrengelman.shadow'
 
+defaultTasks 'shadowJar'
+
 shadowJar {
     destinationDir file("${buildDir}/shadow")
     classifier ''
