make sure tests run in sub-projects on release

--- a/ecs-publish.gradle
+++ b/ecs-publish.gradle
@@ -300,6 +300,7 @@ if (isRootProject) {
 } else {
     task publishGhPages << {}
     task release << {}
+    tasks.release.dependsOn test
 }
 
 clean {
