--- a/ecs-tool.buildscript.gradle
+++ b/ecs-tool.buildscript.gradle
@@ -25,8 +25,8 @@
  * POSSIBILITY OF SUCH DAMAGE.
  */
 repositories {
-    jcenter { url 'http://jcenter.bintray.com/' }
+    jcenter()
 }
 dependencies {
-    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
+    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
 }
